<?xml version="1.0"?>
<package format="3">

  <name>perception_msgs_utils</name>
  <version>1.0.0</version>
  <description>Utility functions for perception_msgs</description>
  
  <maintainer email="guido.kueppers@rwth-aachen.de">Guido Küppers</maintainer>
  <author email="guido.kueppers@rwth-aachen.de">Guido Küppers</author>
  <author email="lennart.reiher@rwth-aachen.de">Lennart Reiher</author>

  <license>MIT</license>

  <depend>geometry_msgs</depend>
  <depend>perception_msgs</depend>
  <depend>ros_environment</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- ROS2 -->
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>

  <!-- ROS1 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>
