<?xml version="1.0"?>
<package format="3">

  <name>tf2_perception_msgs</name>
  <version>1.0.0</version>
  <description>Allows to use tf2::doTransform with perception_msgs</description>

  <maintainer email="lennart.reiher@rwth-aachen.de">Lennart Reiher</maintainer>
  <author email="lennart.reiher@rwth-aachen.de">Lennart Reiher</author>

  <license>MIT</license>

  <depend>geometry_msgs</depend>
  <depend>perception_msgs</depend>
  <depend>perception_msgs_utils</depend>
  <depend>ros_environment</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- ROS2 -->
  <exec_depend condition="$ROS_VERSION == 2">tf2_ros_py</exec_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake_python</buildtool_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_pytest</test_depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>

  <!-- ROS1 -->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <nodelet condition="$ROS_VERSION == 1" plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
